I tried to fix an issue with a cursor on iPhone

--- a/resources/assets/sass/_forms.scss
+++ b/resources/assets/sass/_forms.scss
@@ -10,7 +10,11 @@
 }
 
 .share-label {
+  background: linear-gradient(to right, $lightGreen 0%, $lightGreen 3.125rem, white 3.125rem, white 100%);
+  border: 2px solid $lightGreen;
+  border-radius: .25rem;
   margin-bottom: 0;
+  padding-left: 3.125rem;
   position: relative;
   width: 100%;
 
@@ -29,30 +33,35 @@
     content: '';
     display: inline-block;
     height: 100%;
-    left: 3.1875rem;
+    left: 3.1275rem;
     position: absolute;
     top: 0;
     width: 1px;
   }
-}
-
-.share-input {
-  background: linear-gradient(to right, $lightGreen 0%, $lightGreen 3.125rem, white 3.125rem, white 100%);
-  border: 2px solid $lightGreen;
-  border-radius: .25rem;
-  color: #89959f;
-  cursor: pointer;
-  font-size: 1.125rem;
-  font-weight: normal;
-  height: 3.1875rem;
-  padding: .1rem .625rem .1rem 3.8125rem;
-  width: 100%;
 
   &:active,
   &:focus,
   &:hover {
     background: linear-gradient(to right, lighten($lightGreen, 10%) 0%, lighten($lightGreen, 10%) 3.125rem, white 3.125rem, white 100%);
     border: 2px solid lighten($lightGreen, 10%);
+    outline: 0;
+  }
+}
+
+.share-input {
+  border: 0;
+  border-radius: .25rem;
+  color: #89959f;
+  cursor: pointer;
+  font-size: 1.125rem;
+  font-weight: normal;
+  height: 2.9375rem;
+  padding: 0 .625rem;
+  width: 100%;
+
+  &:active,
+  &:focus,
+  &:hover {
     outline: 0;
   }
 }
